# igloo-mcp

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
igloo_mcp/: config.py  converter.py  formatter.py  igloo.py  logger.py  main.py  sorting.py
scripts/: test_client.py
tests/: conftest.py  test_converter.py  test_formatter.py  test_igloo.py  test_sorting.py
tests/tests_data/mock_data/: auth_failure.json  auth_success.json  search_multi_page_1.json  search_multi_page_2.json  search_single_page.json
